# ModernCppChallenge

./: .gitignore  LICENSE  README.md
001/: build.sh  main.cpp
002/: CMakeLists.txt  main.cpp
003/: build.sh
004/: main.cpp  ponz_utility.cpp  ponz_utility.h
005/: CMakeLists.txt  main.cpp
006/: main.cpp
007/: main.cpp
011/: main.cpp  roman.h
011/test/: CMakeLists.txt  tst_roman.cpp
012/: CMakeLists.txt  collatz.cpp  collatz.h  main.cpp
012/test/: CMakeLists.txt  tst_collatz.cpp
013/: CMakeLists.txt  main.cpp  pi.cpp  pi.h
013/test/: CMakeLists.txt  tst_pi.cpp
014/: CMakeLists.txt  isbn.cpp  isbn.h  main.cpp
014/test/: CMakeLists.txt  tst_isbn.cpp
015/: ipv4.cpp  ipv4.h  main.cpp
016/: CMakeLists.txt  ipv4.cpp  ipv4.h  main.cpp
016/test/: CMakeLists.txt  tst_ipv4.cpp
017/: CMakeLists.txt  array2d.h  main.cpp
017/test/: CMakeLists.txt  tst_2d.cpp
018/: CMakeLists.txt  main.cpp  variadic.h
018/test/: CMakeLists.txt  tst_variadic.cpp
019/: main.cpp  variadic.h
019/test/: tst_variadic.cpp
020/: CMakeLists.txt  contrainerutil.h  main.cpp
020/test/: CMakeLists.txt  tst_contrainerutil.cpp
021/: CMakeLists.txt  main.cpp  systemhandler.cpp  systemhandler.h
021/files/: file1.txt  file2.txt
021/test/: CMakeLists.txt  tst_systemhandler.cpp
021/test/files/: file1.txt  file2.txt
022/: CMakeLists.txt  build.sh  main.cpp  temperature.h
022/test/: CMakeLists.txt  tst_temperature.cpp
023/: CMakeLists.txt  hexutils.h  main.cpp
023/test/: tst_hexutils.cpp
024/: hexutils.h  main.cpp
024/test/: CMakeLists.txt  tst_hexutils.cpp
025/: CMakeLists.txt  capitalize.h  main.cpp
025/test/: CMakeLists.txt  tst_capitalize.cpp
026/: CMakeLists.txt  concatenate.h  main.cpp  test.sh
026/test/: CMakeLists.txt  tst_concatenate.cpp
027/: CMakeLists.txt  main.cpp  split.h
027/test/: CMakeLists.txt  tst_split.cpp
028/: CMakeLists.txt  main.cpp  palindrome.h
028/test/: CMakeLists.txt  tst_palindrome.cpp
029/: CMakeLists.txt  main.cpp  numberplate.h
029/test/: CMakeLists.txt  tst_numberplate.cpp
030/: CMakeLists.txt  extraction.h  main.cpp
030/test/: CMakeLists.txt  tst_extraction.cpp
031/: CMakeLists.txt  main.cpp  rxdate.h
031/test/: CMakeLists.txt  tst_rxdate.cpp
032/: CMakeLists.txt  main.cpp  ptriangle.h
033/: CMakeLists.txt  main.cpp  process_out.h
034/: CMakeLists.txt  main.cpp  remove_blank_line.h  test.txt  test_expected.txt
034/test/: CMakeLists.txt  tst_remove_blank_line.cpp
035/: directory.h  main.cpp
035/test/: CMakeLists.txt  tst_dir_size.cpp
036/: CMakeLists.txt  directory.h  main.cpp
037/: directory.h  main.cpp
038/: CMakeLists.txt  logger.h  main.cpp
039/: CMakeLists.txt  main.cpp  time_count.h
040/: CMakeLists.txt  day.h  day_distance.h  main.cpp
041/: day.h  day_distance.h  main.cpp
042/: day.h  main.cpp
043/: CMakeLists.txt  day.h  main.cpp
044/: CMakeLists.txt  day.h  main.cpp
045/: CMakeLists.txt  alg.h  main.cpp
046/: alg.h  main.cpp
046/test/: CMakeLists.txt  tst_rb.cpp
047/: CMakeLists.txt  double_buffer.h  main.cpp
047/test/: CMakeLists.txt  tst_double_buffer.cpp
048/: CMakeLists.txt  main.cpp  most_frequent.h
049/: CMakeLists.txt  main.cpp  most_frequent.h
050/: main.cpp  phone_number.h
051/: CMakeLists.txt  main.cpp  phone_number.h
052/: CMakeLists.txt  main.cpp  permutation.h
053/: CMakeLists.txt  main.cpp  movie.h
054/: CMakeLists.txt  main.cpp  make_pair.h
054/test/: CMakeLists.txt  tst_make_pair.cpp
055/: main.cpp  zip.h
056/: main.cpp  select_alg.h
057/: CMakeLists.txt  main.cpp  sort_alg.h
058/: CMakeLists.txt  main.cpp  route.h
059/: main.cpp  weasel.h
060/: life.h  main.cpp
061/: main.cpp  parallel.h
062/: main.cpp  parallel.h
063/: main.cpp  parallel.h
064/: main.cpp  parallel.h  sort_alg.h
065/: logger.h  main.cpp
066/: CMakeLists.txt  context.h  customer.h  logger.h  main.cpp  store.h
067/: CMakeLists.txt  build.sh  main.cpp  validator.cpp  validator.h
068/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
069/: CMakeLists.txt  main.cpp  ssn_generator.cpp  ssn_generator.h
070/: CMakeLists.txt  approval.cpp  approval.h  main.cpp
071/: main.cpp  observable_vector.h
071/Test/: CMakeLists.txt  tst_observable_vector.cpp
072/: CMakeLists.txt  discount.h  main.cpp
072/Test/: tst_discount.cpp
073/: CMakeLists.txt  main.cpp  movie.h  movie_xml.h
074/: CMakeLists.txt  main.cpp  movie_xml.h
074/Test/: CMakeLists.txt
075/: main.cc  movie_json.h
076/: CMakeLists.txt  main.cc  movie.h  movie_json.h
077/: CMakeLists.txt  main.cc  movie.h  movie_pdf.h
078/: CMakeLists.txt  image_pdf.cc  image_pdf.h  main.cc
10/: main.cpp
11/: build.sh  main.cpp
3/: main.cpp
4/: CMakeLists.txt
6/: CMakeLists.txt
8/: main.cpp
9/: CMakeLists.txt  main.cpp
